--- a/style-main.css
+++ b/style-main.css
@@ -124,6 +124,24 @@ footer {
   padding: 40px 0;
 }
 
+.enviar {
+  width:40%;
+  padding: 15px 0;
+  background: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;
+}
+
+.enviar:hover {
+  background: darkorange;
+  transform: scale(1.2);
+}
+
 .copyright {
   color: white;
   font-size: 13px;
