Finalizando 3 curso HTML e CSS Alura

--- a/style-main.css
+++ b/style-main.css
@@ -118,12 +118,6 @@ form legend {
   margin: 20px 0;
 }
 
-footer {
-  text-align: center;
-  background: url("../barbearia_alura/bg.jpg");
-  padding: 40px 0;
-}
-
 .enviar {
   width:40%;
   padding: 15px 0;
@@ -140,6 +134,27 @@ footer {
 .enviar:hover {
   background: darkorange;
   transform: scale(1.2);
+}
+
+table {
+  margin: 20px 0 40px;
+}
+
+thead {
+  background: #555555;
+  color: white;
+  font-weight: bold;
+}
+
+td, th {
+  border: 1px solid #000000;
+  padding: 8px 15px;
+}
+
+footer {
+  text-align: center;
+  background: url("../barbearia_alura/bg.jpg");
+  padding: 40px 0;
 }
 
 .copyright {
